--- a/difficult_level_0/hidden_number.ipynb
+++ b/difficult_level_0/hidden_number.ipynb
@@ -14,47 +14,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_string = \"1a2b3c4d123Z\""
+    "my_string = \"kingof98i1k33a2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(my_string):\n",
-    "    result = \"\"\n",
-    "    for s in my_string:\n",
-    "        if s.isdigit()==False:\n",
-    "            result += ' '\n",
-    "        else:\n",
-    "            result += s\n",
-    "            \n",
-    "    result = result.split(' ')\n",
-    "\n",
-    "    while result[-1].isdigit()==False:\n",
-    "        result = result[:-1]\n",
-    "\n",
-    "    return sum([int(i) for i in result])"
+    "    result = []\n",
+    "    for i,s in enumerate(my_string):\n",
+    "        if i==0 and s.isdigit():\n",
+    "            result.append(s)\n",
+    "        elif s.isdigit():\n",
+    "            if my_string[i-1].isdigit():\n",
+    "                result[-1] += s\n",
+    "            else:\n",
+    "                result += [s]\n",
+    "    \n",
+    "    return 0 if len(result)==0 else sum(map(int, result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "133"
+       "134"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
