--- a/difficult_level_1/square_root.ipynb
+++ b/difficult_level_1/square_root.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(n):\n",
-    "    return [int(i) for i in reversed(str(n))]"
+    "    return int((n**0.5+1)**2) if (n**0.5).is_integer() else -1"
    ]
   }
  ],
